--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -731,7 +731,7 @@ a {
   transition: color 0.6s;
 }
 .cid-sbMUOgRDGV {
-  background-color: #8caff0;
+  background-color: #4479d9;
 }
 .cid-siUeA97OLX {
   padding-top: 5rem;
