--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -731,12 +731,12 @@ a {
   transition: color 0.6s;
 }
 .cid-sbMUOgRDGV {
-  background-color: #4479d9;
+  background-color: #1d1e28;
 }
 .cid-siUeA97OLX {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #fafafa;
+  background-color: #1d1e28;
 }
 .cid-siUeA97OLX .mbr-iconfont {
   display: block;
@@ -749,7 +749,7 @@ a {
   transition: all 0.3s;
   border-radius: 4px;
   padding: 1rem;
-  background: #ffffff;
+  background: #ad91ff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -893,7 +893,7 @@ a {
 }
 .cid-sbMTIc02vu .dropdown-menu,
 .cid-sbMTIc02vu .navbar.opened {
-  background: #ffffff !important;
+  background: #232323 !important;
 }
 .cid-sbMTIc02vu .nav-item:focus,
 .cid-sbMTIc02vu .nav-link:focus {
@@ -928,7 +928,7 @@ a {
   transition: all .3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #232323;
 }
 .cid-sbMTIc02vu .navbar.opened {
   transition: all .3s;
@@ -1073,7 +1073,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sbMTIc02vu .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-sbMTIc02vu .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1104,7 +1104,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 .cid-sbMTIc02vu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1318,7 +1318,7 @@ a {
 }
 .cid-sbMTIc02vu .dropdown-menu,
 .cid-sbMTIc02vu .navbar.opened {
-  background: #ffffff !important;
+  background: #232323 !important;
 }
 .cid-sbMTIc02vu .nav-item:focus,
 .cid-sbMTIc02vu .nav-link:focus {
@@ -1353,7 +1353,7 @@ a {
   transition: all .3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #232323;
 }
 .cid-sbMTIc02vu .navbar.opened {
   transition: all .3s;
@@ -1498,7 +1498,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sbMTIc02vu .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-sbMTIc02vu .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1529,7 +1529,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 .cid-sbMTIc02vu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
