--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -749,7 +749,7 @@ a {
   transition: all 0.3s;
   border-radius: 4px;
   padding: 1rem;
-  background: #473c4e;
+  background: #232542;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -757,7 +757,7 @@ a {
 }
 .cid-siUeA97OLX .card-title,
 .cid-siUeA97OLX .card-box {
-  color: #0e0d0d;
+  color: #ffffff;
 }
 .cid-sbN1dGRUre {
   padding-top: 2rem;
