--- a/assets/style.css
+++ b/assets/style.css
@@ -65,7 +65,7 @@ body {
   margin-top: 5%;
   margin-left: 6%;
   margin-right: 1% !important;
-  position: absolute;
+  position: absolute !important;
   color: white;
   word-wrap: break-word;  
 }
