--- a/assets/style.css
+++ b/assets/style.css
@@ -407,12 +407,12 @@ section .section-title {
 
 .backside .card a {
     font-size: 18px;
-    color: #007b5e !important;
+    color: #fcfcfc !important;
 }
 
 .frontside .card .card-title,
 .backside .card .card-title {
-    color: #007b5e !important;
+    color: #fcfcfc !important;
 }
 
 .frontside .card .card-body img {
